--- a/index.html
+++ b/index.html
@@ -1,14 +1,3 @@
-<!DOCTYPE html>
-<html lang="en" >
-<head>
-  <meta charset="UTF-8">
-  <title>Task33#Financial Business</title>
-  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css'>
-<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css'><link rel="stylesheet" href="./style.css">
-
-</head>
-<body>
-<!-- partial:index.partial.html -->
 <!-- Start Header Section
     =====================================================-->
 <div class="header overlay">
@@ -24,22 +13,16 @@
             </span>
             <span>
               <i class="fas fa-phone"></i>
-              +36-707-435-885
-            </span>
-            <span>
-              <i class="fas fa-map-marker-alt"></i>
-              4200 
-              Hajdúszoboszló 
-              Damjanich utca 39
+              090-080-0760
             </span>
           </div>
         </div>
         <div class="grid">
           <div class="right flex">
-            <!--  <a href="#"><i class="fab fa-facebook-f"></i></a>--> 
-            <a href="https://www.instagram.com/geo_hrs/?utm_source=ig_web_button_share_sheet"><i class="fab fa-instagram"></i></a>
-             <!-- <a href="#"><i class="fab fa-linkedin-in"></i></a> --> 
-            <!--  <a href="#"><i class="fab fa-behance"></i></a> -->
+            <a href="#"><i class="fab fa-facebook-f"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fab fa-linkedin-in"></i></a>
+            <a href="#"><i class="fab fa-behance"></i></a>
           </div>
         </div>
       </div>
@@ -51,7 +34,7 @@
       <div class="row space-btween items-center">
         <div class="grid">
           <div class="logo">
-            <h1 class="upper"><a href="#">GEO-HUMAN RESOURCES</a></h1>
+            <h1 class="upper"><a href="#">finance business</a></h1>
           </div>
         </div>
         <div class="grid hidden-x">
@@ -76,11 +59,11 @@
     <div class="container">
       <div class="info col-md-7">
         <h2 class="upper main-color">we are ready to help you</h2>
-        <h3 class="upper h1">Geo Human Resources <br />& consulting services</h3>
+        <h3 class="upper h1">financial analysis <br />& consulting</h3>
         <p>
-          We train new workers extensively before deploying them to our clients
-          Our training ensures they are well-prepared to carry out their responsibilities effectively,
-          delivering high-quality results for our clients.
+          This Financial Consulting Theme is ready to take care of your
+          requirements for running your financial services like financial
+          business and consultancy website
         </p>
         <button class="btn">contact us</button>
       </div>
@@ -117,10 +100,10 @@
   <div class="container">
     <div class="services-header txt-center">
       <h2 class="h2 capital mg-bottom-15">
-        What we <span class="main-color">offer</span>
+        financial <span class="main-color">services</span>
       </h2>
       <p class="upper">
-        Here are some of the services we provide.
+        Lorem ipsum dolor sit amet, consectetur elit.
       </p>
     </div>
     <div class="services-content">
@@ -134,11 +117,10 @@
                    alt="4" border="0">
             </div>
             <div class="services-item-info">
-              <h3 class="capital">Recruitment</h3>
+              <h3 class="capital">digital currency</h3>
               <p>
-                At GEO-HUMAN, we provide top-notch recruitment services, matching skilled professionals with companies that need them. 
-                From sourcing and training to deployment, we handle it all, so you can focus on growing your business.
-                Let us help you build a stronger team.
+                Business finance formulas provide business owners with
+                specific information.
               </p>
               <a class="btn opacity" href="#">read more</a>
             </div>
@@ -153,12 +135,10 @@
                    alt="6" border="0">
             </div>
             <div class="services-item-info">
-              <h3 class="capital">Training</h3>
+              <h3 class="capital">market analysis</h3>
               <p>
-                We make hiring effortless for businesses. We source top talent, provide them with comprehensive training, and deploy them to your team ready to make an impact.
-                Our goal is simple: to deliver skilled professionals who align with your needs and contribute to your success. 
-                We ensure your business has the right people to thrive.
-                Let us handle your recruitment and training needs while you focus on achieving your goals.
+                Business finance formulas provide business owners with
+                specific information.
               </p>
               <a class="btn opacity" href="#">read more</a>
             </div>
@@ -173,11 +153,10 @@
                    alt="1" border="0">
             </div>
             <div class="services-item-info">
-              <h3 class="capital">Consultancy</h3>
+              <h3 class="capital">historical data</h3>
               <p>
-                At G H R, we provide skilled talent and expert consultancy to help businesses thrive. 
-                From recruitment and training to tailored workforce strategies, 
-                we deliver solutions that drive results.
+                Business finance formulas provide business owners with
+                specific information.
               </p>
               <a class="btn opacity" href="#">read more</a>
             </div>
@@ -303,8 +282,8 @@
             <div class="grid">
               <div class="person relative">
                 <div class="person-info txt-center">
-                  <h3 class="capital">Ali Mohammed</h3>
-                  <h4 class="main-color">Co-founder & CEO</h4>
+                  <h3 class="capital">george walker</h3>
+                  <h4 class="main-color">chief financial analyst</h4>
                   <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     Deserunt repellat omnis optio cum placeat repellendus, amet
@@ -317,8 +296,8 @@
             <div class="grid">
               <div class="person relative">
                 <div class="person-info txt-center">
-                  <h3 class="capital">Mikheil Velijanashvili</h3>
-                  <h4 class="main-color">Co-founder & chief financial analyst</h4>
+                  <h3 class="capital">gohn smith</h3>
+                  <h4 class="main-color">chief financial analyst</h4>
                   <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     Deserunt repellat omnis optio cum placeat repellendus, amet
@@ -344,7 +323,7 @@
             request a <span class="main-color">call back</span>
           </h2>
           <p class="upper">
-            Would you like to know about our service?
+            Lorem ipsum dolor sit amet, consectetur elit.
           </p>
         </div>
         <div class="contact-us-form">
@@ -458,10 +437,10 @@
                   Sapiente disnnctio dolores.
                 </p>
                 <div class="icons flex">
-                 <!-- <a href="#"><i class="fab fa-facebook-f"></i></a> -->
-                 <!--  <a href="#"><i class="fab fa-twitter"></i></a> -->
-                 <!--  <a href="#"><i class="fab fa-linkedin-in"></i></a> -->
-                  <a href="https://www.instagram.com/geo_hrs/?utm_source=ig_web_button_share_sheet"><i class="fab fa-instagram"></i></a>
+                  <a href="#"><i class="fab fa-facebook-f"></i></a>
+                  <a href="#"><i class="fab fa-twitter"></i></a>
+                  <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                  <a href="#"><i class="fab fa-behance"></i></a>
                 </div>
               </div>
             </div>
@@ -522,15 +501,16 @@
       <div class="footer-bottom">
         <div class="container">
           <p class="capital txt-center">
-            copyright&copy; 2025 GEO-HUMAN - design by
-            <a href="#">Abubakar Farouk</a>
+            copyright&copy; 2020 financial business - design by
+            <a href="#">walaa salah</a>
           </p>
         </div>
       </div>
     </div>
     <!-- End Footer
     =====================================================  -->
-<!-- partial -->
+                                                                            
+
   
-</body>
-</html>
+
+                                       
