--- a/index.html
+++ b/index.html
@@ -98,8 +98,7 @@
       <div class="call-info">
         <h4>Request a call back right now ?</h4>
         <p>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero,
-          nihil.
+          Would you like to know about our services?.
         </p>
       </div>
       <div class="contact txt-right">
