--- a/index.html
+++ b/index.html
@@ -466,14 +466,14 @@
             </div>
             <div class="grid col-sm-6 col-md-3">
               <div class="useful-links">
-                <h3 class="capital">useful links</h3>
+               <!-- <h3 class="capital">useful links</h3>
                 <ul class="classic-list">
                   <li><a href="#">Lorem, ipsum dolor mi</a></li>
                   <li><a href="#">Lorem, ipsum dolor elit</a></li>
                   <li><a href="#">Lorem, ipsum dolor</a></li>
                   <li><a href="#">Lorem, ipsum dolor mi elit</a></li>
                   <li><a href="#">Lorem, ipsum dolor</a></li>
-                </ul>
+                </ul> -->
               </div>
             </div>
             <div class="grid  col-sm-6 col-md-3">
